[metadata]
name = mlpro-mpps
version = 1.2.2
author = MLPro Team
author_email = mlpro@listen.fh-swf.de
description = MLPro-MPPS - A Customizable Multi-Purpose Production System in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mlpro.readthedocs.io
project_urls = 
    Bug Tracker = https://mlpro.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.9
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
full =
    mlpro[full]>=1.3.1
